certification/LinuxFoundation/CKS/fastcampus-cks/03/elearning-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elearning-ns
spec: {}
status: {}
