certification/LinuxFoundation/CKS/fastcampus-cks/03/management-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: management-ns
  labels:
    role: management
spec: {}
status: {}
