certification/LinuxFoundation/CKS/fastcampus-cks/03/elearning-ns-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    category: edu
  name: class-list
  namespace: management-ns
spec:
  containers:
  - image: nginx
    name: class-list
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
