certification/LinuxFoundation/CKS/fastcampus-cks/03/class-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inputname
spec:
  podSelector: {}
  policyTypes: {}
